bobcat (2.07.00)    ISN

  * FBB::insertable and FBB::throwable are no longer required when using Errno
  * The gptr() < egptr() checks in underflow() functions (IFdStreambuf and
    Randbuffer) are superfluous and have been removed.
  * DateTime's man-page contains a caveat for setMonth
  * Fswap's man-page BUGS section is augmented with a warning against swapping
    streams.

bobcat (2.06.00)

  * Added BigInt::isqrt (integral sqrt computation) 
  * Added BigInt::swap (swapping the current BigInt object's value with
    another BigInt object's value
  * BigInt's members not modifying the current object are now const-correct.
  * In addition to members modifying a BigInt object new members were added
    not modifying the current object but returning a temporary BigInt const
    object holding the result of the computation. All members returning a
    BigInt const object have an additional c added to their names (e.g. `div'
    modifies the current object, `divc' does not). 
    As a result of this name standardization the names of several members were
    modified: 
        `gcd' now modifies the current object, `gcdc' returns a BigInt const.
        `inverseMod' now modifies the current object, `inverseModc' returns 
                                                               a BigInt const.
  * Added template function fswap, performing fast swapping operations.
  * The class Glob is now move-aware (offers move constructor and move 
    assignment operator. In addition it offers a swap member.
  * Move members in Pattern expect 'Pattern const &&', Pattern offers swap.
  * Hostent now is now move-aware and offers a member swap. 
    Included Hostent in the namespace FBB. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 27 Nov 2009 08:49:24 +0100

bobcat (2.05.00)

  * BigInt values inserted into streams do not show leading zeroes anymore, 
    except for octal values.
  * BigInt values can be assigned a value from a textual representation