@@ -6,6 +6,8 @@ bobcat (2.07.00)    ISN
   * DateTime's man-page contains a caveat for setMonth
   * Fswap's man-page BUGS section is augmented with a warning against swapping
     streams.
+  * Compiling cgi/push.cc and cgi/accept.cc conditionally on the g++
+    compiler's version (g++ >= or < version 4.4)
 
 bobcat (2.06.00)
 
